Fix some logic in NLP. Change 'event_log' to acitivty log

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,7 +32,7 @@
                 <h2>Generated process</h2>
                 <div class="preview" id="bpmn">
                 </div>
-                <h2>Generated EventLog</h2>
+                <h2>Generated Activity Log</h2>
                 <div class="preview" id="eventlog">
                 </div>
             </div>
